--- a/happy-birthday-nolan/package.json
+++ b/happy-birthday-nolan/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "firebase": "^9.21.0",
     "lightgallery": "^2.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
